--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <div class="container">
                 <div class="card">
                     <a class="neon" href="Buoi3/Bai1.php">Ex 1</a>
-                    <a class="neon" href="Buoi3/Bai2form.php">Ex 2</a>
+                    <a class="neon" href="Buoi3/Bai2.php">Ex 2</a>
                 </div>
             </div>
         </li>
