--- a/index.html
+++ b/index.html
@@ -130,6 +130,10 @@
             background: url('images/3.jpg') no-repeat center center; 
             background-size: cover; 
         }
+        .demo li:nth-child(4) {
+            background: url('images/4.jpg') no-repeat center center; 
+            background-size: cover; 
+        }
             .demo li:hover {
             -webkit-box-flex: 3;
             -webkit-flex: 3;
@@ -173,8 +177,21 @@
             </span>
             <div class="container">
                 <div class="card">
-                    <a class="neon" href="Buoi3/Bai1.php">Ex 1</a>
+                    <a class="neon" href="Buoi3/Bai1js.php">Ex 1.1</a>
+                    <a class="neon" href="Buoi3/Bai1.php">Ex 1.2</a>
                     <a class="neon" href="Buoi3/Bai2.php">Ex 2</a>
+                </div>
+            </div>
+        </li>
+        <li>
+            <span class="neon">
+                Lab 4
+            </span>
+            <div class="container">
+                <div class="card">
+                    <a class="neon" href="Buoi4/Bai1form.php">Ex 1</a>
+                    <a class="neon" href="Buoi4/Bai2cookie/Bai2form.php">Ex 2 cookie</a>
+                    <a class="neon" href="Buoi4/Bai2session/Bai3form.php">Ex 2 session</a>
                 </div>
             </div>
         </li>
